@@ -148,6 +148,16 @@ name|DecimalFormat
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
 begin_comment
 comment|/**  * Test of the DisjunctionMaxQuery.  *  */
 end_comment
@@ -760,6 +770,225 @@ operator|.
 name|setSimilarity
 argument_list|(
 name|sim
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testSkipToFirsttimeMiss
+specifier|public
+name|void
+name|testSkipToFirsttimeMiss
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|DisjunctionMaxQuery
+name|dq
+init|=
+operator|new
+name|DisjunctionMaxQuery
+argument_list|(
+literal|0.0f
+argument_list|)
+decl_stmt|;
+name|dq
+operator|.
+name|add
+argument_list|(
+name|tq
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"d1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dq
+operator|.
+name|add
+argument_list|(
+name|tq
+argument_list|(
+literal|"dek"
+argument_list|,
+literal|"DOES_NOT_EXIST"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|QueryUtils
+operator|.
+name|check
+argument_list|(
+name|dq
+argument_list|,
+name|s
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Weight
+name|dw
+init|=
+name|dq
+operator|.
+name|weight
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Scorer
+name|ds
+init|=
+name|dw
+operator|.
+name|scorer
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+specifier|final
+name|boolean
+name|skipOk
+init|=
+name|ds
+operator|.
+name|skipTo
+argument_list|(
+literal|3
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|skipOk
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"firsttime skipTo found a match? ... "
+operator|+
+name|r
+operator|.
+name|document
+argument_list|(
+name|ds
+operator|.
+name|doc
+argument_list|()
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|testSkipToFirsttimeHit
+specifier|public
+name|void
+name|testSkipToFirsttimeHit
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|DisjunctionMaxQuery
+name|dq
+init|=
+operator|new
+name|DisjunctionMaxQuery
+argument_list|(
+literal|0.0f
+argument_list|)
+decl_stmt|;
+name|dq
+operator|.
+name|add
+argument_list|(
+name|tq
+argument_list|(
+literal|"dek"
+argument_list|,
+literal|"albino"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dq
+operator|.
+name|add
+argument_list|(
+name|tq
+argument_list|(
+literal|"dek"
+argument_list|,
+literal|"DOES_NOT_EXIST"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|QueryUtils
+operator|.
+name|check
+argument_list|(
+name|dq
+argument_list|,
+name|s
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Weight
+name|dw
+init|=
+name|dq
+operator|.
+name|weight
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Scorer
+name|ds
+init|=
+name|dw
+operator|.
+name|scorer
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"firsttime skipTo found no match"
+argument_list|,
+name|ds
+operator|.
+name|skipTo
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"found wrong docid"
+argument_list|,
+literal|"d4"
+argument_list|,
+name|r
+operator|.
+name|document
+argument_list|(
+name|ds
+operator|.
+name|doc
+argument_list|()
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
